# MapleDumper-rs

./: .editorconfig  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CROSS_VERSION_BASELINE.md  Cargo.toml  NOTICE  PR_BODY.md  README.md  SECURITY.md  THIRD-PARTY-LICENSES.md  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  native.yml  release.yml
crates/maple-app/: Cargo.toml  frontend_test.cjs  tauri.conf.json
crates/maple-app/frontend/: app.js  asmscan.js  editor.js  history.js  i18n.js  icons.js  index.html  inspector.js  masking.js  patterns.js  sigmaker.js  style.css  theme-init.js  theme.js  unpack.js  workspace.js
crates/maple-app/frontend/vs/: VENDOR.md
crates/maple-app/src/: asmscan.rs  diff.rs  disasm.rs  export.rs  fileio.rs  history.rs  history_cmd.rs  jobs.rs  main.rs  scan.rs  sigmaker.rs  state.rs  unpack_cmd.rs  util.rs
crates/maple-cli/: Cargo.toml
crates/maple-cli/src/: main.rs
crates/maple-core/: Cargo.toml
crates/maple-core/benches/: generate.rs  scan.rs
crates/maple-core/examples/: scan_matrix.rs  sig_validate.rs
crates/maple-core/src/: asmscan.rs  categorizer.rs  diff.rs  domain.rs  engine.rs  fileimage.rs  health.rs  lib.rs  live.rs  memory.rs  output.rs  pattern.rs  process.rs  resolver.rs  scanner.rs  sigmaker.rs  stamp.rs
crates/maple-core/src/sigmaker/: aob.rs  bytepath.rs  callers.rs  chain.rs  constants.rs  corpus_tests.rs  encoding.rs  ensemble.rs  graph.rs  identity.rs  imports.rs  inspect.rs  mod.rs  model.rs  relocate.rs  scoring.rs  strands.rs  tests.rs  types.rs  validate.rs  vtable.rs
crates/maple-core/src/unpack/: dump.rs  mod.rs  native.rs  sha256.rs  tests.rs  verify.rs
crates/maple-core/tests/: golden.rs  parser_props.rs
crates/maple-unpack-native/: Cargo.toml  NOTICE  build.rs  deny.toml
crates/maple-unpack-native/.cargo/: config.toml
crates/maple-unpack-native/src/: agent.rs  driver.rs  emulate.rs  imports.rs  lib.rs  main.rs  pe_build.rs  process.rs  real_validation.rs  rpc.rs  version.rs
crates/maple-unpack-native/src/resources/: agent.js
