[workspace]
resolver = "3"
members = ["crates/maple-core", "crates/maple-cli", "crates/maple-app"]

[workspace.package]
version = "0.1.2"
edition = "2024"
license = "MIT"
authors = ["TajuC"]
repository = "https://github.com/TajuC/MapleDumper-rs"
rust-version = "1.95"

[workspace.dependencies]
maple-core = { path = "crates/maple-core" }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
