[workspace]
resolver = "3"
members = ["crates/maple-core", "crates/maple-cli", "crates/maple-app"]
# Built only on x64 with the heavy native toolchain (LLVM/libclang, cmake, ninja) and shipped as a
# sibling dumper binary, so it stays out of the portable workspace that CI builds for msrv/i686.
exclude = ["crates/maple-unpack-native"]

[workspace.package]
version = "0.7.0"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["TajuC"]
repository = "https://github.com/TajuC/MapleDumper-rs"
rust-version = "1.95"

[workspace.dependencies]
maple-core = { path = "crates/maple-core" }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
