[package]
name = "maple-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
maple-core.workspace = true
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.17"
rusqlite = { version = "0.40", features = ["bundled"] }
iced-x86 = "1"
blake3 = "1"
