[package]
name = "maple-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "mapledumper"
path = "src/main.rs"

[dependencies]
maple-core.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
